randomizador-de-numeros

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="dado" src="dadoc.png" alt="dado">
+    <img class="dado" src="./assets/dadoc.png" alt="dado">
 <div class="box">
     <h1>sortear numero</h1>
     
